--- a/app/src/main/res/layout/activity_registro_busqueda.xml
+++ b/app/src/main/res/layout/activity_registro_busqueda.xml
@@ -23,7 +23,7 @@
         android:id="@+id/campoCategoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="id"/>
+        android:hint="Categoria"/>
 
     <EditText
         android:id="@+id/campoQuery"
